fix(CrossChain): button was squashed by loading

--- a/src/components/Wallet/Transfer/CrossChain/CrossChain.scss
+++ b/src/components/Wallet/Transfer/CrossChain/CrossChain.scss
@@ -8,4 +8,8 @@
             opacity: 0.8;
         }
     }
+
+    .buttonComponent {
+        flex: 0 0 auto;
+    }
 }
